# rigor

./: Cargo.toml  README.md
examples/echo/: .rigor  .rigor.snapshot  test.rigor  test.rigor.snapshot
src/: main.rs  rigor.rs  snap.rs
