[package]
name = "rigor"
version = "0.1.0"
author = "Swarnim Arun <mail@swarnimarun.com>"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
insta = "1.40.0"
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.8", features = ["http2", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "tokio-macros"] }
